
  Implemented requests:

  - Online team projects
  http://sourceforge.net/support/tracker.php?aid=3513384

  - Apply penalties to external TMXs
  http://sourceforge.net/support/tracker.php?aid=3528575

----------------------------------------------------------------------
 OmegaT 2.5.4 update 2
----------------------------------------------------------------------
   0 Enhancement
   1 Bug fix
   0 Localisation update
----------------------------------------------------------------------
2.5.4 update 2 vs. 2.5.4 update 1

  Bug fixes:

  - Windows installer: the user language was always set in OmegaT.l4J.ini,
regardless of the choice of the user

----------------------------------------------------------------------
 OmegaT 2.5.4 update 1
----------------------------------------------------------------------
   3 Enhancements
   4 Bug fixes
   4 Localisation updates
----------------------------------------------------------------------
2.5.4 update 1 vs. 2.5.4

  Implemented requests:

  - Help&Manual: hide content of tags per translate=true/false
  http://sourceforge.net/support/tracker.php?aid=3528468

  - Camtasia added tags
  http://sourceforge.net/support/tracker.php?aid=3528472

  Other enhancements:

  - Windows installer: there's a new option to specify whether the 
language chosen during installation should be used for OmegaT. If
Yes, OmegaT.l4J.ini is modified to use that language.

  Bug fixes:

  - Exception if new non-default /tm contains TMs to segment
  http://sourceforge.net/support/tracker.php?aid=3425237

  - NullPointerException during resegmentation
  http://sourceforge.net/support/tracker.php?aid=3481757

  - When editing project-specific file filters, the checkbox was 
labelled jCheckBox1 instead of "Enable project specific filters"

  - When changing project-specific segmentation rules to default and back,
the results were not immediately visible

  Localisation updates:

  - Italian localisation updated to 2.5.4 (UI, readme)